<resources>
    <string name="app_name">Rakuten Photos</string>
    <string name="header_text">Header</string>
    <string name="title">Title</string>
    <string name="error">Error</string>
    <string name="id">id: %s</string>
    <string name="owner">owner: %s</string>
    <string name="secret">secret: %s</string>
    <string name="server">server: %s</string>
    <string name="farm">farm: %d</string>
    <string name="is_public">ispublic: %d</string>
    <string name="is_friend">isfriend: %d</string>
    <string name="is_family">isfamily: %d</string>
    <string name="title_des">Title: %s</string>
    <string name="network_error">Please check internet connection and try again.</string>
    <string name="something_wrong">something went wrong please try again</string>
    <string name="retry">Retry</string>
</resources>