<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/detail_page_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/ivPhotoImage"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPhotoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/title_des"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPhotoImage" />

        <TextView
            android:id="@+id/tvPhotoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhotoTitle" />

        <TextView
            android:id="@+id/tvPhotoOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/owner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhotoId" />

        <TextView
            android:id="@+id/tvPhotoSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/secret"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoOwner" />

        <TextView
            android:id="@+id/tvPhotoServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/server"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoSecret" />

        <TextView
            android:id="@+id/tvPhotoFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/farm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoServer" />


        <TextView
            android:id="@+id/tvIsPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/is_public"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhotoFarm" />

        <TextView
            android:id="@+id/tvIsFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/is_friend"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIsPublic" />

        <TextView
            android:id="@+id/tvIsFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_page_text_padding"
            android:text="@string/is_family"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIsFriend" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>